--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-canvas{
-  height: 90vh;
-  width: 50%;
+*{
+  background-color: black;
 }
